# creative_code

./: .gitignore  README.md
base_p5_svg/: index.html  sketch.js
blender/assets/: mesaball.blend
blender/flow fields/: flow fields new.blend  flow fields.blend
blender/fractal tree/: pythagorian tree.blend
blender/hex_grid/: untitled.blend
blender/mazes/: default_renderer.py  readme.md  run_first.py
blender/metaballs/: mesaball.blend
blender/tree/: tree.blend
blender/waves/: waves.blend
blender/worms/: worms.blend
img2plot/: run.py
mazes/: gwrite.toml
mazes/scripts/: booklet_preposessing.py  generate_multiple.py  run_first.py  run_organic_growth.py
mazes/tmp/: WIP_rope_as_graph.py  final_bis.py
mazes/vpype_scripts/: booklet.sh  gwrite.toml  works.vpy
mazes/work in progress/: WORKS_final_bis.py  text_to_shapely.py  voro_maze.py
plotter/settings/: config_xyz.yaml
plotter_art_utils/: pyproject.toml  readme.md
simple_python/font_grid/: grid_patterns.py  letters.py  number.py
vks/: turtletoy_scrapper.py
vks/3d_differential_growth/: README.md  sketch_3d_differential_growth.py
vks/bubbles/: README.md  sketch_bubbles.py
vks/cairo_openstreetmap/: README.md  sketch_cairo_openstreetmap.py
vks/circle_packing_1/: README.md  sketch_circle_packing_1.py
vks/cmyk/: run.py  run.sh  vpype.toml
vks/fish/: sketch_fish.py
vks/lorenz_xz/: README.md  sketch_lorenz_xz.py
vks/magicavoxel_models_ca_voxcast/: README.md  sketch_magicavoxel_models_ca_voxcast.py
vks/mapbox_renders/: README.md  sketch_mapbox_renders.py
vks/pcb/: README.md  (+1 more)
(+37 files in other folders)
