[project]
name = "plotter_art_utils"
version = "0.0.1"
authors = [
  { name="Erik Lambrechts", email="author@example.com" },
]
description = "some utlities for plotting art"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"